add event stream
